services/profile/deploy/ingress/nginx-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      serviceAccountName: ingress-nginx
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.48.1
          ports:
            - containerPort: 80
            - containerPort: 443
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-ingress-controller
