services/profile/deploy/ingress/profile-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: profile-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 50054
